--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.3.0",
   "description": "A Git-backed Markdown note-taking desktop application",
   "main": "dist/electron/electron/main.js",
+  "author": {
+    "name": "Suleyman Cabir Ataman",
+    "email": "suleymanc@protonmail.com"
+  },
   "scripts": {
     "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:electron\"",
     "dev:frontend": "vite",
@@ -25,7 +29,6 @@
     "git",
     "electron"
   ],
-  "author": "",
   "license": "MIT",
   "devDependencies": {
     "@jest/test-sequencer": "^30.2.0",
