--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "wait-on": "^7.2.0"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.962.0",
     "@codemirror/lang-markdown": "^6.2.3",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
