--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "notegit",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "description": "A Git-backed Markdown note-taking desktop application",
   "main": "dist/electron/electron/main.js",
   "author": {
@@ -36,6 +36,7 @@
     "@types/node": "^20.10.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
+    "@types/react-test-renderer": "^18.0.7",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "@vitejs/plugin-react": "^4.2.1",
@@ -44,6 +45,7 @@
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
     "jest": "^29.7.0",
+    "react-test-renderer": "^18.2.0",
     "rimraf": "^5.0.5",
     "ts-jest": "^29.1.1",
     "typescript": "^5.3.3",
@@ -66,6 +68,7 @@
     "adm-zip": "^0.5.16",
     "archiver": "^7.0.1",
     "dompurify": "^3.0.6",
+    "mermaid": "^11.12.2",
     "node-machine-id": "^1.1.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
