--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "notegit",
-  "version": "2.0.1",
+  "version": "2.1.0",
+  "packageManager": "pnpm@10.28.0",
   "description": "A Git-backed Markdown note-taking desktop application",
   "main": "dist/electron/electron/main.js",
   "author": {
@@ -8,16 +9,16 @@
     "email": "suleymanc@protonmail.com"
   },
   "scripts": {
-    "dev": "concurrently \"npm run dev:frontend\" \"npm run dev:electron\"",
+    "dev": "concurrently \"pnpm run dev:frontend\" \"pnpm run dev:electron\"",
     "dev:frontend": "vite",
     "dev:electron": "wait-on http://localhost:5173 && cross-env NODE_ENV=development electron .",
-    "build": "npm run build:frontend && npm run build:backend && npm run build:electron && npm run fix-imports",
+    "build": "pnpm run build:frontend && pnpm run build:backend && pnpm run build:electron && pnpm run fix-imports",
     "build:frontend": "vite build",
     "build:backend": "tsc -p tsconfig.backend.json",
     "build:electron": "tsc -p tsconfig.electron.json",
     "fix-imports": "node fix-electron-imports.js",
     "start": "electron .",
-    "package": "npm run build && electron-builder",
+    "package": "pnpm run build && electron-builder",
     "clean": "rimraf dist",
     "test": "./node_modules/.bin/jest",
     "test:watch": "./node_modules/.bin/jest --watch",
@@ -56,6 +57,8 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.962.0",
     "@codemirror/lang-markdown": "^6.2.3",
+    "@codemirror/state": "^6.5.4",
+    "@codemirror/view": "^6.39.11",
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.15.0",
@@ -76,6 +79,12 @@
     "remark-gfm": "^4.0.0",
     "simple-git": "^3.21.0",
     "winston": "^3.11.0"
+  },
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "electron",
+      "esbuild"
+    ]
   },
   "build": {
     "appId": "com.notegit.app",
