--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "clean": "rimraf dist",
     "test": "./node_modules/.bin/jest",
     "test:watch": "./node_modules/.bin/jest --watch",
-    "test:coverage": "./node_modules/.bin/jest --coverage"
+    "test:coverage": "./node_modules/.bin/jest --coverage",
+    "lint": "eslint . --ext .ts,.tsx",
+    "lint:fix": "eslint . --ext .ts,.tsx --fix",
+    "prepare": "husky install"
   },
   "keywords": [
     "notes",
@@ -45,6 +48,10 @@
     "cross-env": "^7.0.3",
     "electron": "^28.0.0",
     "electron-builder": "^24.9.1",
+    "eslint": "^8.57.1",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "react-test-renderer": "^18.2.0",
     "rimraf": "^5.0.5",
