--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "notegit",
-  "version": "2.2.1",
+  "version": "2.2.2",
   "packageManager": "pnpm@10.28.0",
   "description": "A Git-backed Markdown note-taking desktop application",
   "main": "dist/electron/electron/main.js",
@@ -87,7 +87,8 @@
     "remark-gfm": "^4.0.0",
     "simple-git": "^3.21.0",
     "unist-util-visit": "^5.0.0",
-    "winston": "^3.11.0"
+    "winston": "^3.11.0",
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
