--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "notegit",
-  "version": "2.6.3",
+  "version": "2.6.5",
   "packageManager": "pnpm@10.28.0",
   "description": "A Git-backed Markdown note-taking desktop application",
   "main": "dist/electron/electron/main.js",
@@ -23,6 +23,7 @@
     "test": "./node_modules/.bin/jest",
     "test:watch": "./node_modules/.bin/jest --watch",
     "test:coverage": "./node_modules/.bin/jest --coverage",
+    "coverage:check-staged": "node scripts/check-staged-coverage.js",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write --ignore-unknown \"{src,docs,setup}/**/*.{ts,tsx,js,jsx,mjs,cjs,json,md,css,html,yml,yaml}\" \"*.{md,json}\"",
