test: fix minor things on code coverage check

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "test": "./node_modules/.bin/jest",
     "test:watch": "./node_modules/.bin/jest --watch",
     "test:coverage": "./node_modules/.bin/jest --coverage",
-    "coverage:check-staged": "node scripts/check-staged-coverage.js",
+    "coverage:check": "node scripts/check-coverage-threshold.js",
+    "coverage:check-staged": "pnpm run coverage:check",
     "lint": "eslint . --ext .ts,.tsx",
     "lint:fix": "eslint . --ext .ts,.tsx --fix",
     "format": "prettier --write --ignore-unknown \"{src,docs,setup}/**/*.{ts,tsx,js,jsx,mjs,cjs,json,md,css,html,yml,yaml}\" \"*.{md,json}\"",
