--- a/.github/workflows/macos-dmg.yml
+++ b/.github/workflows/macos-dmg.yml
@@ -54,6 +54,12 @@ jobs:
             echo "use_nvmrc=false" >> "$GITHUB_OUTPUT"
           fi
 
+      - name: Setup pnpm
+        if: steps.detect_pm.outputs.pm == 'pnpm'
+        uses: pnpm/action-setup@v4
+        with:
+          run_install: false
+
       - name: Setup Node (.nvmrc)
         if: steps.node_version.outputs.use_nvmrc == 'true'
         uses: actions/setup-node@v4
@@ -74,7 +80,6 @@ jobs:
           set -euo pipefail
           case "${{ steps.detect_pm.outputs.pm }}" in
             pnpm)
-              corepack enable
               pnpm install --frozen-lockfile
               ;;
             yarn)
