feat: integration tests and additional pipelines (#19)
* test: initiate integration tests

* test: write some test cases

* test: add main usecases

* chore: bump version

* test: adding extra use cases

* test: introduce s3 tests

* test: adding s3 int test cases

* feat: adding windows and linux pipelines

* feat: improve readme by adding coverage and builds

--- a/.gitignore
+++ b/.gitignore
@@ -30,4 +30,10 @@ Thumbs.db
 # Electron
 electron-builder.yml
 prompts/
+
+# Test Results
 lint_output.txt
+test-results/
+
+# Local planning/scratch docs
+.local/
