fix: add missing setup to the broken pipelines

--- a/.github/workflows/windows-installer.yml
+++ b/.github/workflows/windows-installer.yml
@@ -41,6 +41,13 @@ jobs:
             exit 1
           fi
 
+      - name: Setup pnpm
+        if: steps.detect_pm.outputs.pm == 'pnpm'
+        uses: pnpm/action-setup@v4
+        with:
+          version: 10.28.0
+          run_install: false
+
       - name: Detect Node version source
         id: node_version
         shell: bash
