ci: add integration pipeline, badge, and test catalog

--- a/.github/workflows/coverage.yml
+++ b/.github/workflows/coverage.yml
@@ -6,6 +6,7 @@ on:
       - main
     paths-ignore:
       - "badges/coverage.json"
+      - "badges/integration.json"
   pull_request:
   workflow_dispatch:
 
