--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -55,15 +55,12 @@ jobs:
 
       - name: Run integration tests
         id: run_integration
+        continue-on-error: true
         shell: bash
         run: |
           set -euo pipefail
-          set +e
           export PLAYWRIGHT_JSON_OUTPUT_NAME=integration-results.json
           xvfb-run -a pnpm exec playwright test -c playwright.integration.config.ts --reporter=line,json
-          TEST_EXIT=$?
-          set -e
-          echo "test_exit=$TEST_EXIT" >> "$GITHUB_OUTPUT"
           test -f integration-results.json
 
       - name: Generate integration badge JSON
@@ -126,8 +123,8 @@ jobs:
           echo "Integration: ${{ steps.badge.outputs.integration_passed }}/${{ steps.badge.outputs.integration_total }} passing"
 
       - name: Fail if integration tests failed
-        if: ${{ steps.run_integration.outputs.test_exit != '0' }}
+        if: ${{ steps.run_integration.outcome == 'failure' }}
         shell: bash
         run: |
-          echo "::error::Integration tests failed."
+          echo "::error::Integration tests failed. Check the 'Run integration tests' step output and uploaded artifacts."
           exit 1
