fix: install electron runtime deps in integration workflow

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -45,7 +45,22 @@ jobs:
         shell: bash
         run: |
           set -euo pipefail
-          pnpm exec playwright install-deps chromium
+          sudo apt-get update
+          sudo apt-get install -y \
+            xvfb \
+            libgtk-3-0 \
+            libnotify4 \
+            libnss3 \
+            libxss1 \
+            libxtst6 \
+            xauth \
+            libatspi2.0-0 \
+            libdrm2 \
+            libgbm1 \
+            libxcb-dri3-0 \
+            libxshmfence1 \
+            libasound2
+          pnpm exec playwright install --with-deps chromium
 
       - name: Build app once
         shell: bash
