--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "notegit",
-  "version": "2.7.6",
+  "version": "2.7.7",
   "packageManager": "pnpm@10.28.0",
   "description": "A Git-backed Markdown note-taking desktop application",
   "main": "dist/electron/electron/main.js",
@@ -20,9 +20,9 @@
     "start": "electron .",
     "package": "pnpm run build && electron-builder",
     "clean": "rimraf dist",
-    "test": "./node_modules/.bin/jest",
-    "test:watch": "./node_modules/.bin/jest --watch",
-    "test:coverage": "./node_modules/.bin/jest --coverage",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "test:integration": "pnpm run build && pnpm exec playwright test -c playwright.integration.config.ts",
     "test:integration:headed": "pnpm run build && pnpm exec playwright test -c playwright.integration.config.ts --headed",
     "coverage:check": "node scripts/check-coverage-threshold.js",
